# YTubeInsight

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  make.bat  requirements.txt  usage.rst
examples/: basic_usage.py
tests/: init.py  test_analyzer.py  test_utils.py
ytubeinsight/: __init__.py  analyzer.py  exceptions.py  utils.py
