[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytubeinsight"
version = "0.1.0"
description = "A Python package for YouTube channel analytics"
readme = "README.md"
authors = [{ name = "Md. Fahim Bin Amin", email = "fahimbinamin@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["youtube", "analytics", "api"]
dependencies = [
    "google-api-python-client >= 2.0.0",
    "requests >= 2.25.0",
    "beautifulsoup4 >= 4.9.0",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/FahimFBA/ytubeinsight"

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]